Imported from https://9262700@github.com/9262700/testGitHub.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group userid/9262700
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group userid/9262700
+	label-Verified = -1..+1 group userid/9262700
+	push = group userid/9262700
+	read = group userid/9262700
+	rebase = group userid/9262700
+	removeReviewer = group userid/9262700
+	submit = group userid/9262700
+[access "refs/heads/*"]
+	create = group userid/9262700
+	push = +force group userid/9262700
+	pushMerge = group userid/9262700
+	read = group userid/9262700
+[access "refs/tags/*"]
+	push = group userid/9262700
+	push = +force group userid/9262700
